--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ description: A new Flutter project.
 
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
-version: 0.0.1+1
+version: 0.1.0+1
 
 environment:
   sdk: '>=2.19.4 <4.0.0'
@@ -31,6 +31,7 @@ dev_dependencies:
     sdk: flutter
 
   flutter_lints: ^2.0.0
+  msix: ^3.16.7
  
 flutter:
   uses-material-design: true
