--- a/.github/workflows/flutter-ci.yml
+++ b/.github/workflows/flutter-ci.yml
@@ -87,7 +87,21 @@ jobs:
         shell: pwsh
         run: |
           $zipPath = "windows-debug.zip"
-          Compress-Archive -Path "build/windows/runner/Debug/*" -DestinationPath $zipPath -Force
+          $preferred = Join-Path -Path "build/windows/x64/runner/Debug" -ChildPath "*"
+          if (Test-Path (Split-Path $preferred)) {
+            Compress-Archive -Path $preferred -DestinationPath $zipPath -Force
+          } else {
+            $exe = Get-ChildItem -Path "build/windows" -Recurse -Filter *.exe -ErrorAction SilentlyContinue |
+              Where-Object { $_.FullName -match "\\(Debug|debug)\\" } |
+              Select-Object -First 1
+            if (-not $exe) {
+              Write-Host "Could not find Debug .exe under build/windows. Listing build dir for diagnostics:"
+              Get-ChildItem -Path build/windows -Recurse -ErrorAction SilentlyContinue | Select-Object FullName | Out-Host
+              throw "Windows Debug executable not found."
+            }
+            $folder = Split-Path $exe.FullName -Parent
+            Compress-Archive -Path (Join-Path $folder '*') -DestinationPath $zipPath -Force
+          }
 
       - name: Upload Windows debug artifact
         uses: actions/upload-artifact@v4
@@ -95,11 +109,58 @@ jobs:
           name: windows-debug-zip
           path: windows-debug.zip
 
+  android_release:
+    name: Android Release (signed AAB/APK)
+    if: startsWith(github.event.head_commit.message, 'release')
+    runs-on: ubuntu-latest
+    needs: get_version
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Set up Flutter (${{ env.FLUTTER_CHANNEL }})
+        uses: subosito/flutter-action@v2
+        with:
+          channel: ${{ env.FLUTTER_CHANNEL }}
+
+      - name: Flutter pub get
+        run: flutter pub get
+
+      - name: Prepare Android keystore
+        env:
+          ANDROID_KEYSTORE_BASE64: ${{ secrets.ANDROID_KEYSTORE_BASE64 }}
+        run: |
+          mkdir -p android/keystore
+          echo "$ANDROID_KEYSTORE_BASE64" | base64 -d > android/keystore/etherstash_android_release.jks
+
+      - name: Write key.properties
+        run: |
+          cat > android/key.properties <<EOF
+          storePassword=${{ secrets.ANDROID_STORE_PASSWORD }}
+          keyPassword=${{ secrets.ANDROID_KEY_PASSWORD }}
+          keyAlias=${{ secrets.ANDROID_KEY_ALIAS }}
+          storeFile=../keystore/etherstash_android_release.jks
+          EOF
+
+      - name: Build Android App Bundle (release)
+        run: flutter build appbundle --release --build-name ${{ needs.get_version.outputs.VERSION_NAME }}
+
+      - name: Build Android APK (release)
+        run: flutter build apk --release --build-name ${{ needs.get_version.outputs.VERSION_NAME }}
+
+      - name: Upload Android release artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: android-release
+          path: |
+            build/app/outputs/bundle/release/app-release.aab
+            build/app/outputs/flutter-apk/app-release.apk
+
   release:
     name: Create GitHub Release (and build MSIX)
     if: startsWith(github.event.head_commit.message, 'release')
     runs-on: windows-latest
-    needs: [get_version, android_debug, windows_debug]
+    needs: [get_version, android_debug, windows_debug, android_release]
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -156,6 +217,12 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: windows-debug-zip
+          path: ./release-assets
+
+      - name: Download Android release artifacts
+        uses: actions/download-artifact@v4
+        with:
+          name: android-release
           path: ./release-assets
 
       - name: Move MSIX into assets (if exists)
