--- a/.github/workflows/flutter-ci.yml
+++ b/.github/workflows/flutter-ci.yml
@@ -38,6 +38,7 @@ jobs:
 
   android_debug:
     name: Android Debug APK
+    if: ${{ !startsWith(github.event.head_commit.message, 'release') }}
     runs-on: ubuntu-latest
     needs: get_version
     steps:
@@ -63,6 +64,7 @@ jobs:
 
   windows_debug:
     name: Windows Debug EXE
+    if: ${{ !startsWith(github.event.head_commit.message, 'release') }}
     runs-on: windows-latest
     needs: get_version
     steps:
@@ -156,11 +158,60 @@ jobs:
             build/app/outputs/bundle/release/app-release.aab
             build/app/outputs/flutter-apk/app-release.apk
 
+  windows_release:
+    name: Windows Release (zip exe folder)
+    if: startsWith(github.event.head_commit.message, 'release')
+    runs-on: windows-latest
+    needs: get_version
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Set up Flutter (${{ env.FLUTTER_CHANNEL }})
+        uses: subosito/flutter-action@v2
+        with:
+          channel: ${{ env.FLUTTER_CHANNEL }}
+
+      - name: Enable Windows desktop
+        run: flutter config --enable-windows-desktop
+
+      - name: Flutter pub get
+        run: flutter pub get
+
+      - name: Build Windows release
+        run: flutter build windows --release --build-name ${{ needs.get_version.outputs.VERSION_NAME }}
+
+      - name: Package Windows release folder
+        shell: pwsh
+        run: |
+          $zipPath = "windows-release.zip"
+          $preferred = Join-Path -Path "build/windows/x64/runner/Release" -ChildPath "*"
+          if (Test-Path (Split-Path $preferred)) {
+            Compress-Archive -Path $preferred -DestinationPath $zipPath -Force
+          } else {
+            $exe = Get-ChildItem -Path "build/windows" -Recurse -Filter *.exe -ErrorAction SilentlyContinue |
+              Where-Object { $_.FullName -match "\\(Release|release)\\" } |
+              Select-Object -First 1
+            if (-not $exe) {
+              Write-Host "Could not find Release .exe under build/windows. Listing build dir for diagnostics:"
+              Get-ChildItem -Path build/windows -Recurse -ErrorAction SilentlyContinue | Select-Object FullName | Out-Host
+              throw "Windows Release executable not found."
+            }
+            $folder = Split-Path $exe.FullName -Parent
+            Compress-Archive -Path (Join-Path $folder '*') -DestinationPath $zipPath -Force
+          }
+
+      - name: Upload Windows release artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: windows-release-zip
+          path: windows-release.zip
+
   release:
     name: Create GitHub Release (and build MSIX)
     if: startsWith(github.event.head_commit.message, 'release')
     runs-on: windows-latest
-    needs: [get_version, android_debug, windows_debug, android_release]
+    needs: [get_version, android_release, windows_release]
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -207,16 +258,10 @@ jobs:
             "path=$($msix.FullName)" | Out-File -FilePath $env:GITHUB_OUTPUT -Encoding utf8 -Append
           }
 
-      - name: Download Android debug artifact
+      - name: Download Windows release artifact
         uses: actions/download-artifact@v4
         with:
-          name: android-debug-apk
-          path: ./release-assets
-
-      - name: Download Windows debug artifact
-        uses: actions/download-artifact@v4
-        with:
-          name: windows-debug-zip
+          name: windows-release-zip
           path: ./release-assets
 
       - name: Download Android release artifacts
