--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,10 @@ dependencies:
   hive_flutter: ^1.1.0
   shared_preferences: ^2.5.3
   http: ^1.2.2
+  tray_manager: ^0.5.0
+  window_manager: ^0.4.0
+  screen_retriever: ^0.2.0
+  desktop_multi_window: ^0.2.1
 
 dev_dependencies:
   hive_generator: ^2.0.1
@@ -36,3 +40,5 @@ dev_dependencies:
 flutter:
   uses-material-design: true
   generate: true
+  assets:
+    - assets/images/
